--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <section class="linha3">
                 <div class="campo">
                     <label for="cep">CEP</label>
-                    <input type="text" name="cep" id="cep" pattern="\d{5}-?\d{3}" placeholder="XXXXX-XXX">
+                    <input type="text" name="cep" id="cep" pattern="\d{5}-?\d{3}" placeholder="00000-000">
                 </div>
 
                 <div class="campo">
